[tool.poetry]
name = "xtn"
version = "0.1.1"
description = "A library for working with the xtn format"
authors = ["Koustubh Moharir <koustubhmoharir@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/koustubhmoharir/xtn"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
